.iac/kubernetes/base/service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wizard-test-service
  labels:
    app.kubernetes.io/app: wizard-test
    app.kubernetes.io/component: service
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-methods: "*"
    nginx.ingress.kubernetes.io/cors-allow-headers: "*"
    cert-manager.io/issuer: service
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - replaceme.st.dev
      secretName: service-ssl-stamp
  rules:
    - host: replaceme.st.dev
      http:
        paths:
        - path: /api(/|)(.*)
          pathType: Prefix
          backend:
            service:
              name: service
              port:
                number: 80
